style: center img

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
   border: 3px solid lightseagreen;
   width: 400px;
   margin: 1rem;
+  margin: 0 auto;
 }
 
 .img-contain__image {
@@ -39,6 +40,12 @@ body {
 /* FORM */
 .form {
   border: 5px solid red;
+  padding: 1rem;
+  margin: 1rem;
+}
+
+.form_section {
+  border: 3px solid yellow;
   padding: 1rem;
   margin: 1rem;
 }
