--- a/style.css
+++ b/style.css
@@ -21,6 +21,21 @@ body {
 .header {
   border: 3px solid lightsalmon;
   margin: 1rem;
+  text-align: center;
+}
+
+.header__span {
+  border: 1px solid red;
+  display: block;
+  text-align: right;
+}
+
+.header__title {
+  display: inline;
+}
+.header_container {
+  border: 1px solid red;
+  display: inline-block;
 }
 
 /* IMAGE */
