style: center image

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ body {
 
   margin: 1rem;
   margin: 0 auto;
+  max-width: 350px;
 }
 
 .img-contain__image {
@@ -62,7 +63,7 @@ body {
 .form {
   border: 5px solid red;
   margin-top: 0.9rem;
-  width: 300px;
+  width: 350px;
   margin-right: auto;
   margin-left: auto;
 }
