--- a/style.css
+++ b/style.css
@@ -8,15 +8,15 @@
 body {
   font-family: "Varela", sans-serif;
   color: white;
-  background-color: #1f1e2e;
 }
 /* MAIN */
 .main {
-  max-width: 500%;
+  max-width: 500px;
   margin-right: auto;
   margin-left: auto;
   padding: 2rem;
-  border: 3px solid lawngreen;
+  background-color: #1f1e2e;
+  /* border: 3px solid lawngreen; */
 }
 
 /* .container {
@@ -61,7 +61,7 @@ body {
 
 /* FORM */
 .form {
-  border: 5px solid red;
+  /* border: 5px solid red; */
   margin-top: 0.9rem;
   width: 350px;
   margin-right: auto;
@@ -69,7 +69,7 @@ body {
 }
 
 .form_section {
-  border: 3px solid yellow;
+  /* border: 3px solid yellow; */
   padding: 1rem;
   margin: 1rem;
 }
