--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@
 body {
   font-family: "Varela", sans-serif;
   color: white;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.52), rgba(255, 255, 255, 0.283)),
+    url("images/mountains.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 /* MAIN */
 .main {
@@ -16,6 +21,7 @@ body {
   margin-left: auto;
   padding: 2rem;
   background-color: #1f1e2e;
+  opacity: 0.9;
   /* border: 3px solid lawngreen; */
 }
 
