--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   font-family: "Varela", sans-serif;
   color: white;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.52), rgba(255, 255, 255, 0.283)),
-    url("images/mountains.jpg");
+    url(images/mountains.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
