--- a/style.css
+++ b/style.css
@@ -124,10 +124,30 @@ input[type="button"] {
   margin: 0 auto;
 }
 
+input[type="button"]:hover,
+input[type="button"]:focus {
+  background-color: white;
+  border: 1px solid #f44b27;
+  color: #f44b27;
+}
+
 option,
 input[type="radio"],
 input[type="checkbox"] {
   margin-bottom: 0.5rem;
+}
+
+textarea:hover,
+select:hover,
+input[type="text"]:hover,
+input[type="number"]:hover,
+input[type="email"]:hover,
+textarea:focus,
+select:focus,
+input[type="text"]:focus,
+input[type="number"]:focus,
+input[type="email"]:focus {
+  border-bottom: 2px solid #f5af2f;
 }
 
 /* LABEL */
