--- a/style.css
+++ b/style.css
@@ -18,38 +18,22 @@ body {
   --main-color: #1f1e2e;
 }
 
-input,
-textarea,
-select,
-button {
-  font-family: "Varela", sans-serif;
-  color: whitesmoke;
-}
-
 /* MAIN */
 .main {
   max-width: 480px;
   margin: 0 auto;
   padding: 2rem;
-  /* opacity: 0.; */
   background-color: var(--main-color);
-  /* border: 3px solid lawngreen; */
   border-radius: 5%;
 }
 
-/* .container {
-  border: 3px solid gold;
-  padding: 2rem;
-} */
 /* HEAD */
 .header {
-  /* border: 3px solid lightsalmon; */
   margin-bottom: 2rem;
   text-align: center;
 }
 
 .header__span {
-  /* border: 1px solid red; */
   display: block;
   text-align: right;
   font-style: italic;
@@ -61,29 +45,16 @@ button {
   font-size: 3rem;
 }
 .header_container {
-  /* border: 1px solid red; */
   display: inline-block;
 }
 
 /* IMAGE */
 .img-contain {
-  /* border: 3px solid lightseagreen; */
-  /* margin: 1rem;
-  margin: 0 auto;
-  max-width: 350px; */
   display: none;
 }
-*/
-
-/* .img-contain__image {
-  display: block;
-  max-width: 350px;
-  max-width: 100%;
-} */
 
 /* FORM */
 .form {
-  /* border: 5px solid red; */
   margin-top: 0.9rem;
   width: 350px;
   margin-right: auto;
@@ -91,11 +62,27 @@ button {
 }
 
 .form_section {
-  /* border: 3px solid yellow; */
   margin: 1rem;
 }
 
+/* LABEL */
+.form_section__label {
+  margin-top: 0.5rem;
+  display: block;
+  font-size: 0.8rem;
+  color: whitesmoke;
+  /* border: 2px solid yellow; */
+}
+
 /* INPUT */
+input,
+textarea,
+select,
+button {
+  font-family: "Varela", sans-serif;
+  color: whitesmoke;
+}
+
 input[type="text"],
 input[type="email"],
 input[type="number"],
@@ -124,19 +111,13 @@ input[type="button"] {
   margin: 0 auto;
 }
 
-input[type="button"]:hover,
-input[type="button"]:focus {
-  background-color: white;
-  border: 1px solid #f44b27;
-  color: #f44b27;
-}
-
 option,
 input[type="radio"],
 input[type="checkbox"] {
   margin-bottom: 0.5rem;
 }
 
+/* INPUT HOVER & FOCUS */
 textarea:hover,
 select:hover,
 input[type="text"]:hover,
@@ -150,11 +131,9 @@ input[type="email"]:focus {
   border-bottom: 2px solid #f5af2f;
 }
 
-/* LABEL */
-.form_section__label {
-  margin-top: 0.5rem;
-  display: block;
-  font-size: 0.8rem;
-  color: whitesmoke;
-  /* border: 2px solid yellow; */
+input[type="button"]:hover,
+input[type="button"]:focus {
+  background-color: white;
+  border: 1px solid #f44b27;
+  color: #f44b27;
 }
