--- a/style.css
+++ b/style.css
@@ -129,8 +129,21 @@ input[type="button"]:focus {
 }
 
 /* MEDIA QUERIES */
+/* MIN-600PX */
 @media (min-width: 600px) {
   .main {
     width: 600px;
+  }
+}
+/* MIN-800PX */
+@media (min-width: 800px) {
+  .form {
+    flex-direction: row;
+    border: 2px solid greenyellow;
+    width: 100%;
+  }
+  .container-left {
+    border: 2px solid palegoldenrod;
+    width: 50%;
   }
 }
