--- a/style.css
+++ b/style.css
@@ -23,10 +23,9 @@ body {
 .main {
   display: flex;
   flex-direction: column;
-  min-width: 150px;
   width: 100%;
   margin: auto;
-  padding: 1rem 2rem;
+  padding: 1rem 0;
   background-color: var(--main-color);
 }
 
@@ -100,9 +99,9 @@ input[type="button"] {
   border-radius: 15px;
   text-transform: uppercase;
   font-weight: bold;
+  margin-bottom: 1rem;
   width: 100%;
   color: white;
-  transition: background-color 0.5s, color 0.5s;
 }
 
 option,
@@ -132,6 +131,7 @@ input[type="button"]:focus {
   .form {
     flex-direction: row;
     width: 100%;
+    padding: 1rem;
   }
   .container-left {
     width: 50%;
@@ -139,5 +139,10 @@ input[type="button"]:focus {
 
   textarea {
     padding-bottom: 4rem;
+  }
+
+  input[type="button"] {
+    transition: background-color 0.5s, color 0.5s;
+    margin-top: 2rem;
   }
 }
